--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shop - buôn bán</title>
-        <link rel="stylesheet" href="../css/reset.css" />
-        <link rel="stylesheet" href="../css/home.css" />
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="./assets/css/home.css" />
     </head>
     <body>
         <div
             class="home-page-wrapper"
-            style="background-image: url('../img/homebg.jpg')"
+            style="background-image: url('./assets/img/homebg.jpg')"
         >
-            <a href="/assets/page/admin.html">
+            <a href="./admin/views/admin.html">
                 <div class="left-content-home hover-border-11">
-                    <img src="../img/adminuser.jpg" alt="" /> <span></span>
+                    <img src="./assets/img/adminuser.jpg" alt="" />
+                    <span></span>
                     <span>Admin Page</span>
                 </div>
             </a>
-            <a href="../page/store.html">
+            <a href="./customer/views/store.html">
                 <div class="right-content-home hover-border-11">
-                    <img src="../img/store.png" alt="" />
+                    <img src="./assets/img/store.png" alt="" />
                     <span>Store Here</span>
                 </div>
             </a>
